objects/LTX_Employment__c.object
<CustomObject>
    <fields>
        <fullName>LTX_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTX_Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTX_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTX_Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currently Working</fullName>
                </value>
                <value>
                    <fullName>Last Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employment</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employment Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>